--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ body {background: #00b3e6;}
 div {width: 700px;margin: auto;font-family: Helvetica Neue;background: white;padding: 30px;}
 
 /* ID selector to select the element with id 'main-header' */
-#main-header {
-  /* Your code here! */
+#main-header {font-size: 22px;
   color:red;
 }
 
