--- a/style.css
+++ b/style.css
@@ -11,6 +11,4 @@ div {width: 700px;margin: auto;font-family: Helvetica Neue;background: white;pad
 }
 
 /* Class selector to select elements containing the class 'perspective-questions' */
-.perspective-questions {
-  /* Your code here! */
-}
+.perspective-questions {font-style: italic;}
