--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ div {width: 700px;margin: auto;font-family: Helvetica Neue;background: white;pad
 
 /* ID selector to select the element with id 'main-header' */
 #main-header {font-size: 22px;
-  color:red;
-}
+  color:red;}
 
 /* Class selector to select elements containing the class 'perspective-questions' */
 .perspective-questions {font-style: italic;}
